--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "date-validator",
 	"title": "Date Validator",
 	"description": "A date validator for jquery-validation plugin",
-	"version": "1.0.2-pre",
+	"version": "1.0.2",
 	"homepage": "https://github.com/Arkni/date-validator/",
 	"author": {
 		"name": "Arkni Brahim",
