--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A date validator for jquery-validation plugin",
 	"version": "1.0.3-pre",
 	"homepage": "https://github.com/Arkni/date-validator/",
+	"license": "MIT",
 	"author": {
 		"name": "Arkni Brahim",
 		"email": "brahim.arkni@gmail.com",
@@ -23,24 +24,23 @@
 		}
 	],
 	"scripts": {
-		"test": "grunt",
-		"prepublish": "grunt"
+		"test": "grunt"
 	},
 	"files": ["dist/date-validator.js"],
 	"main": "dist/date-validator.js",
 	"dependencies": {},
 	"devDependencies": {
-		"commitplease": "2.0.0",
-		"grunt": "0.4.4",
-		"grunt-contrib-compress": "0.7.0",
-		"grunt-contrib-concat": "0.3.0",
-		"grunt-contrib-copy": "0.5.0",
-		"grunt-contrib-jshint": "^0.10.0",
-		"grunt-contrib-qunit": "0.4.0",
-		"grunt-contrib-uglify": "0.4.0",
-		"grunt-contrib-watch": "0.6.0",
-		"grunt-jscs": "1.0.0",
-		"grunt-text-replace": "0.3.11"
+		"commitplease": "2.3.1",
+		"grunt": "1.0.1",
+		"grunt-contrib-compress": "1.2.0",
+		"grunt-contrib-concat": "1.0.1",
+		"grunt-contrib-copy": "1.0.0",
+		"grunt-contrib-jshint": "1.0.0",
+		"grunt-contrib-qunit": "1.2.0",
+		"grunt-contrib-uglify": "1.0.1",
+		"grunt-contrib-watch": "1.0.0",
+		"grunt-jscs": "2.8.0",
+		"grunt-text-replace": "0.4.0"
 	},
 	"keywords": [
 		"jquery",
