Build: Use npm to fetch external libs

--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
 		"grunt-contrib-uglify": "1.0.1",
 		"grunt-contrib-watch": "1.0.0",
 		"grunt-jscs": "2.8.0",
-		"grunt-text-replace": "0.4.0"
+		"grunt-text-replace": "0.4.0",
+		"jquery": "1.12.4",
+		"jquery-validation": "^1.15.0",
+		"qunitjs": "^2.0.0"
 	},
 	"keywords": [
 		"jquery",
