--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"grunt-text-replace": "0.4.0",
 		"jquery": "1.12.4",
 		"jquery-validation": "^1.15.0",
+		"load-grunt-tasks": "3.5.0",
 		"qunitjs": "^2.0.0"
 	},
 	"keywords": [
